# encrypt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  ENGLISH_DOCUMENTATION.md  LICENSE  README.md  README_EN.md  build.sh  build_windows.sh  install_windows.bat  install_windows_en.bat
assets/: input.kev  input.txt
cmake/: toolchain-mingw-w64.cmake
docs/: DOCUMENTATION.md
examples/: CMakeLists.txt  basic_usage.cpp  folder_encryption.cpp  simple_example.cpp
include/: decrypt.h  encrypt.h  encryptdecrypt.h
include/encrypt/: crypto.h  crypto_en.h  platform.h  platform_en.h
lib/argon2/include/: argon2.h
lib/argon2/src/: argon2.c  core.c  encoding.c  ref.c  thread.c
lib/argon2/src/blake2/: blake2b.c
resources/: encrypt.manifest  resources.rc  resources_en.rc
scripts/: build.sh  build_windows.sh
src/: decrypt.cpp  decrypt.h  encrypt.cpp  encrypt.h  main.cpp
src/core/: crypto.cpp
src/platform/: linux.cpp  windows.cpp  windows_en_messages.h
src/ui/: cli.cpp
test/: CMakeLists.txt  crypto_test.cpp
win-build/: CMakeCache.txt  Makefile  cmake_install.cmake
